<resources>
    <string name="app_name">Singularity Homeworks</string>
    <string name="add">Добавить</string>
    <string name="amount">Сумма</string>
    <string name="sort_by">Сортировать по</string>
    <string name="alphabet">Алфавиту</string>
    <string name="by_amount">Стоимости</string>
    <string name="reset_sort">Сбросить сортировку</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Вы уверены, что хотите удалить валюту?</string>
    <string name="cancel">Отмена</string>
    <string name="delete_ru">Удалить</string>
    <string name="currency_name">Название валюты</string>
    <string name="in_tenge">Кол. тенге в валюте</string>
    <string name="flag">Выбрать флаг</string>
    <string name="translator">Переводчик</string>
    <string name="news">Qyzyqty kontent</string>
    <string name="converter">Конвертер</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="default_name">Azat Serzhanov</string>
    <string name="default_email">azatserzhan@gmail.com</string>
    <string name="main_features">Основные</string>
    <string name="statistics">Статистика</string>
    <string name="all_users">Все пользователи</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Поделиться</string>
    <string name="email">Отправить по почте</string>
    <string name="call">Позвонить</string>
    <string name="camera">Запустить камеру</string>
    <string name="search_kz">Izdey</string>
    <string name="movie1_name">Komedıia Ákіm 2020</string>
    <string name="movie1_descrp">Молодого мажора по имени Азамат, привыкшего к комфортной городской жизни, по стечению непредвиденных обстоятельств, отправляют работать Акимом в отдаленный посёлок - Таза Булак. … С первого дня пребывания в ауле, новоиспечённый Аким мечтает о том, чтобы вернуться в город.</string>
    <string name="filter_view_example_singularity">example://singularity</string>
    <string name="filter_view_http_singularity">http://www.example.com/singularity</string>
    <string name="deeplink_uri_translator">www.example.com/singularity/translator</string>
    <string name="deeplink_uri_favorites">www.example.com/singularity/favorites</string>
    <string name="deeplink_uri_converter">www.example.com/singularity/converter</string>
    <string name="deeplink_uri_search">www.example.com/singularity/search</string>
    <string name="deeplink_uri_profile">www.example.com/singularity/profile</string>
</resources>