<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_translator"
        android:enabled="true"
        android:icon="@drawable/ic_translator"
        android:title="@string/translator" />
    <item
        android:id="@+id/navigation_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/news"/>

    <item
        android:id="@+id/navigation_converter"
        android:enabled="true"
        android:icon="@drawable/ic_converter"
        android:title="@string/converter"
        />

    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/profile"
        />
</menu>