<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.ProfileMainTabFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_share"
        style="@style/ProfileButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintBottom_toTopOf="@id/btn_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/btn_email"
        style="@style/ProfileButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@id/btn_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_share" />

    <TextView
        android:id="@+id/btn_call"
        style="@style/ProfileButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_email"
        app:layout_constraintBottom_toTopOf="@id/btn_camera"/>

    <TextView
        android:id="@+id/btn_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ProfileButtons"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_call"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</LinearLayout>