<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_dialog_title"
        android:textAppearance="@style/DefaultTextStyle"
        android:textAlignment="center"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textAppearance="@style/DefaultTextStyle"
            android:textAlignment="center"
            android:background="@drawable/bg_btn_dialog"
            android:padding="12dp"
            android:layout_marginEnd="32dp"/>

        <TextView
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_ru"
            android:textAppearance="@style/DefaultTextStyle"
            android:textAlignment="center"
            android:background="@drawable/bg_btn_dialog"
            android:padding="12dp"/>

    </LinearLayout>

</LinearLayout>