<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="20dp"
    android:paddingTop="32dp"
    android:paddingBottom="16dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="32dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_curr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DefaultTextStyle.ListItemTextStyle"
            app:hintTextColor="@color/hint"
            tools:hint="Лира, Турция"
            android:hint="@string/currency_name"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginBottom="20dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DefaultTextStyle.ListItemTextStyle"
            app:hintTextColor="@color/hint"
            tools:hint="50"
            android:hint="@string/in_tenge"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_choose_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_bottom_sheet"
        android:text="@string/flag"
        android:textAppearance="@style/DefaultTextStyle.BottomSheetButtonText"
        android:padding="16dp"
        android:layout_gravity="end"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_bottom_sheet"
        android:text="@string/add"
        android:textAppearance="@style/DefaultTextStyle.BottomSheetButtonText"
        android:padding="16dp"
        android:layout_gravity="end"/>

</LinearLayout>